# maple-lobbying

./: .dockerignore  .gitignore  Dockerfile  README.md  app.py  cdk.json  docker-compose.yml  main.py  pyproject.toml  requirements.txt  test.html
data/: contributions.csv  last_processed.pkl  lobbying.csv
migrations/: create_tables.sql
src/: lobbyingDataPage.py  lobbyingScraper.py  main.py  requestsScraper.py  seleniumScraper.py  settings.py  sql_manager.py  utils.py
src/cdk/: __init__.py  cicd_stack.py  lobbying_stack.py  maple_application_stage.py  shared_stack.py
